[package]
name = "bq-api"
version = "1.0.0"
edition = "2021"

[dependencies]
actix-cors = "0.7.0"
actix-session = { version = "0.9.0", features = ["cookie-session"] }
actix-web = "4"
anyhow = "1.0.82"
bcrypt = "0.15.1"
chrono = { version="0.4.38", features = ["serde"] }
dotenv = "0.15.0"
rand = "0.8.5"
regex = "1.10.4"
serde = { version = "1.0.200", features = ["derive"] }
serde_json = "1.0.116"
sqlx = { version = "0.7.4", features = ["postgres", "macros", "runtime-tokio"] }
