[package]
name = "oncology-quest-api-integration-tests"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
rand = "0.8.5"
reqwest = { version = "0.12.4", features = ["json"] }
reqwest_cookie_store = "0.8.0"
serde = { version = "1.0.200", features = ["derive"] }
serde_json = "1.0.117"
tokio = { version = "1.38.0", features = ["full"] }
tokio-macros = { version = "2.2.0" }
chrono = { version="0.4.38", features = ["serde"] }