[package]
name = "oncology-quest-api"
version = "1.0.0"
edition = "2021"

[dependencies]
actix-cors = "0.7.0"
actix-files = { version = "0.6.6", optional = true }
actix-governor = "0.5.0"
actix-web = "4"
anyhow = "1.0.82"
bcrypt = "0.15.1"
chrono = { version = "0.4.38", features = ["serde"] }
dotenv = "0.15.0"
jsonwebtoken = "9.3.0"
rand = "0.8.5"
regex = "1.10.4"
serde = { version = "1.0.200", features = ["derive"] }
serde_json = "1.0.116"
sqlx = { version = "0.7.4", features = ["postgres", "chrono", "macros", "runtime-tokio"] }

[features]
production = []
monolith = ["dep:actix-files"]
